<resources>
    <string name="app_name">AR Travel Guide</string>
    <string name="usn">Email</string>
    <string name="usnHint">So we can ID you</string>
    <string name="insUsnHint">username@privider.domain</string>
    <string name="psw">Password</string>
    <string name="pswHint">So we can authenticate you</string>
    <string name="insPswHint">password</string>
    <string name="conpsw">Confirm Password</string>
    <string name="conpswHint">retype password</string>
    <string name="about">About Us</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="title_activity_about">About</string>
    <string name="bullet">&#8226;</string>
    <string name="about1">We are recruiting website and application developers. Drop your Resume at: recruit@fileserver2.in</string>
    <string name="about2">Get paid to advertise/share this website. Contact advertise@fileserver2.in.</string>
    <string name="about3">This is not a finished product. The application is under development but works just fine.</string>
    <string name="about4">This application hosts a total of 36,203 files.</string>
    <string name="about5">The total size of the data is 27.53 GB</string>
    <string name="about6">The data will be updated 2&#8211;3 times a week.</string>
    <string name="about7">Developed and managed by, just some student(s).</string>
    <string name="title_activity_sign_up">Fileserver2</string>
    <string name="title_activity_data">Fileserver2</string>
    <string name="timeTable">Time Table</string>
    <string name="webKiosk">Webkiosk</string>
    <string name="logout">Logout</string>
    <string name="profile">My Profile</string>
    <string name="title_activity_profile">Fileserver2</string>
    <string name="fnm">First Name</string>
    <string name="lnm">Last Name</string>
    <string name="rln">Roll Number</string>
    <string name="bta">Batch</string>
    <string name="btn">Number</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_study_material">Fileserver2</string>
</resources>
