<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Profile"
    tools:showIn="@layout/activity_profile"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/navBarBorder"
        android:theme="@style/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navBarBorder"
        app:layout_constraintBottom_toTopOf="@id/footerBorder">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fnmLabel"
                    android:theme="@style/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fnm"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:background="@drawable/inputicon">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="7"
                            android:src="@drawable/ic_usn"
                            app:srcCompat="@drawable/ic_usn" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/fnm"
                        android:theme="@style/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inputbox"
                        android:padding="8dp"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorPrimaryDark"
                        android:hint=""
                        android:importantForAutofill="yes"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lnmLabel"
                    android:theme="@style/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lnm"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:background="@drawable/inputicon">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="7"
                            android:src="@drawable/ic_usn"
                            app:srcCompat="@drawable/ic_usn" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/lnm"
                        android:theme="@style/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inputbox"
                        android:padding="8dp"
                        android:inputType="textCapWords"
                        android:textColor="@color/colorPrimaryDark"
                        android:hint=""
                        android:importantForAutofill="yes"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rlnLabel"
                    android:theme="@style/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/rln"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:background="@drawable/inputicon">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="7"
                            android:src="@drawable/ic_key"
                            app:srcCompat="@drawable/ic_key" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/rln"
                        android:theme="@style/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inputbox"
                        android:padding="8dp"
                        android:inputType="number"
                        android:textColor="@color/colorPrimaryDark"
                        android:hint=""
                        android:importantForAutofill="yes"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="4">

                    <TextView
                        android:id="@+id/btaLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/bta"
                        android:theme="@style/label" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="8dp"
                            android:background="@drawable/inputicon">

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="7"
                                android:src="@drawable/ic_batch"
                                app:srcCompat="@drawable/ic_batch" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                        </LinearLayout>

                        <EditText
                            android:id="@+id/bta"
                            android:theme="@style/input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/inputbox"
                            android:padding="8dp"
                            android:inputType="textCapCharacters"
                            android:textColor="@color/colorPrimaryDark"
                            android:hint=""
                            android:importantForAutofill="yes"/>

                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="6">

                    <TextView
                        android:id="@+id/btnLabel"
                        android:theme="@style/label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/btn"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="8dp"
                            android:background="@drawable/inputicon">

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="7"
                                android:src="@drawable/ic_batch"
                                app:srcCompat="@drawable/ic_batch" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                        </LinearLayout>

                        <EditText
                            android:id="@+id/btn"
                            android:theme="@style/input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/inputbox"
                            android:padding="8dp"
                            android:inputType="number"
                            android:textColor="@color/colorPrimaryDark"
                            android:hint=""
                            android:importantForAutofill="yes"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:background="@drawable/primarybutton"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    android:onClick="submit"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@drawable/secondarybutton"
                    android:textColor="@color/white"
                    android:onClick="cancel"
                    android:clickable="true"/>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footerBorder"
        android:theme="@style/border"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer"/>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>